--- a/html/blog-app/index.html
+++ b/html/blog-app/index.html
@@ -23,7 +23,7 @@
 
         button {
         	margin-top: 20px;
-        	margin-left: 40px;
+        	margin-left: 20px;
         }
 
         .template {
@@ -149,7 +149,7 @@
 							    </div>
 							    <div class="form-group">
 							        <label for="content" class="control-label">Content</label>
-							        <textarea class="form-control" name="content" id="content"></textarea>
+							        <textarea class="form-control"  rows="5" name="content" id="content"></textarea>
 							    </div>
 							    <div class="form-group" style="text-align: right">
 							      	<button type="button" id="saveBtn" class="btn btn-success">Save</button>
@@ -235,6 +235,15 @@
 			$('#editModal').on('hide.bs.modal', function() {
 				$('#editForm')[0].reset();
 			});
+
+			// realize the modal vertical centering
+			$('#editModal').on('show.bs.modal', function (e) {
+		      	$(this).css('display', 'block'); 
+		      	var modalHeight = ($(window).height() - $('#editModal .modal-dialog').height()) / 2;
+
+		        $(this).find('.modal-dialog')
+		               .css('margin-top', modalHeight); 
+		    });
 		});	
     </script>
 </body>
