--- a/css/vertical-center.html
+++ b/css/vertical-center.html
@@ -23,7 +23,8 @@
 		}
 
 		/* Method two: Flex layout */
-/*		body {
+/*		
+		body {
 			display: flex;
 			align-items: center;
 			justify-content: center;
