--- a/html/blog-homepage/index.html
+++ b/html/blog-homepage/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above three meta tags must be placed at the top, any other content must be followed by! -->
-	<title>My Blog App</title>
+	<title>My Blog Home</title>
 
 	<!-- Bootstrap core CSS -->
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
@@ -102,7 +102,7 @@
     			<div id="blogContent" class="col-md-9">
     				<div class="thumbnail">
 			    		<div class="img-container">
-			    			<img src="image01.jpg" alt="Unable to load image">
+			    			<img src="image.jpg" alt="Unable to load image">
 			    			<div class="cateName">Edit</div>
 			    		</div>
 		  				<div class="caption">
