--- a/css/vertical-horizontal-center.html
+++ b/css/vertical-horizontal-center.html
@@ -13,47 +13,72 @@
 			height: 100%;
 		}
 
-		/* Method One (Note: last line style can be replaced with 
-		/* 'transform: translate(-50%, -50%)' in CSS3 */
-		.box {
-			width: 300px;
-			height: 300px;
-			background-color: orange;
+		/* Solution #1: Absolute positioning without self-adaptation */
+		.wrapper {
 			position: relative;
-			top: 50%;
-			left: 50%;
-			margin: -150px 0 0 -150px;
 		}
 
-		/* Method Two (Note: last line style can be replaced with 
-		/* 'transform: translateY(-50%)' in CSS3 */
-		/* .box {
-			width: 300px;
-			height: 300px;
-			background-color: orange;
-			margin: 0 auto;
-			position: relative;
+		.box {
+			width: 100px;
+			height: 100px;
+			border: 1px solid orange;
+			position: absolute;
 			top: 50%;
-			margin-top: -150px;
+			left: 50%;
+			margin: -51px 0 0 -51px;
+		}
+
+		/* Solution #2: Absolute positioning with self-adaptation using margin:auto */		
+		/* .wrapper {
+			position: relative;
+		}
+
+		.box {
+			width: 50%;
+			height: 50%;
+			border: 1px solid orange;
+			position: absolute;
+			margin: auto;
+			top: 0;
+			right: 0;
+			bottom: 0;
+			left: 0;
 		} */
 
-		/* Method Three: Flex layout */
-        /*		
-		body {
+
+		/* Solution #3: Absolute positioning with self-adaptation using transform in CSS3 */
+		/* .wrapper {
+			position: relative;
+		}
+
+		.box {
+			width: 50%;
+			height: 50%;
+			border: 1px solid orange;
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+		} */
+
+		/* Solution #4: Flex layout */		
+		/* .wrapper {
 			display: flex;
 			align-items: center;
 			justify-content: center;
 		}
 
 		.box {
-			width: 300px;
-			height: 300px;
-			background-color: orange;
-		}
-        */
+			width: 50%;
+			height: 50%;
+			border: 1px solid orange;
+		} */
+
 	</style>
 </head>
 <body>
-	<div class="box"></div>
+	<div class="wrapper">
+		<div class="box"></div>
+	</div>
 </body>
 </html>
